
  - Using a "dynamic" loader with a "secondary" table now produces
    a query where the "secondary" table is *not* aliased.  This
    allows the secondary Table object to be used in the "order_by"
    attribute of the relation(), and also allows it to be used
    in filter criterion against the dynamic relation.
    [ticket:1531]

  - an explicit check occurs when a synonym() is used with 
    map_column=True, when a ColumnProperty (deferred or otherwise)
    exists separately in the properties dictionary sent to mapper
    with the same keyname.   Instead of silently replacing 
    the existing property (and possible options on that property), 
    an error is raised.  [ticket:1633]
    
  - a "dynamic" loader sets up its query criterion at construction
    time so that the actual query is returned from non-cloning
    accessors like "statement".
    
  - the "named tuple" objects returned when iterating a
    Query() are now pickleable.

  - mapping to a select() construct now requires that you 
    make an alias() out of it distinctly.   This to eliminate
    confusion over such issues as [ticket:1542]
    
  - query.join() has been reworked to provide more consistent 
    behavior and more flexibility (includes [ticket:1537])

  - query.select_from() accepts multiple clauses to produce 
    multiple comma separated entries within the FROM clause.
    Useful when selecting from multiple-homed join() clauses.

  - query.get() can be used with a mapping to an outer join
    where one or more of the primary key values are None.
    [ticket:1135]
    
  - query.from_self(), query.union(), others which do a 
    "SELECT * from (SELECT...)" type of nesting will do
    a better job translating column expressions within the subquery
    to the columns clause of the outer query.  This is
    potentially backwards incompatible with 0.5, in that this 
    may break queries with literal expressions that do not have labels
    applied (i.e. literal('foo'), etc.)